# linear-regression

./: README.md  fat_supply.ipynb  kc_regression.ipynb  pyproject.toml
