[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Bhagirath Bhatt <budbhatt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.5"
matplotlib = "^3.3.3"
pandas = "^1.2.1"
jupyterlab = "^3.0.5"
sklearn = "^0.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
